# src/cmd/docs/swagger.yaml
@@ -57,6 +57,8 @@ definitions:
         type: string
       id:
         type: integer
+      owner:
+        type: string
       password:
         type: string
       phone_number:
@@ -106,6 +108,8 @@ definitions:
       email:
         type: string
       full_name:
+        type: string
+      owner:
         type: string
       password:
         type: string
