# src/controllers/user.go
@@ -4,7 +4,9 @@ import (
 	"Improve/src/dtos"
 	"Improve/src/errors"
 	"Improve/src/logger"
+	"Improve/src/middlewares"
 	"Improve/src/services"
+	"Improve/src/token"
 	"github.com/gin-gonic/gin"
 	"strconv"
 )
@@ -26,6 +28,10 @@ func (u userController) List(ctx *gin.Context) {
 		u.HandleError(ctx, errors.New(errors.InvalidRequestError, err))
 		return
 	}
+
+	authPayload := ctx.MustGet(middlewares.AuthorizationPayloadKey).(*token.Payload)
+	listUserReq.Owner = authPayload.Email
+
 	resp, err := u.userService.List(ctx, &listUserReq)
 	u.Respond(ctx, resp, err)
 }
@@ -38,7 +44,14 @@ func (u userController) GetUser(ctx *gin.Context) {
 		u.HandleError(ctx, errors.New(errors.InvalidRequestError, err))
 		return
 	}
+
 	resp, err := u.userService.GetUser(ctx, id)
+	authPayload := ctx.MustGet(middlewares.AuthorizationPayloadKey).(*token.Payload)
+	if resp.Data.Email != authPayload.Email {
+		logger.Context(ctx).Errorf("[UserController][GetUser] Account doesn't belong to authenticated")
+		u.HandleError(ctx, errors.New(errors.UnauthorizedCodeError, err))
+		return
+	}
 	u.Respond(ctx, resp, err)
 }
 
